# Probabilistic_Colocalization_Estimator

./: .gitattributes  README.md  build-backend-sidecar.mjs  citation.cff  index.html  main-window.cjs  main.cjs  main.js  package-lock.json  package.json  pce-backend  preload.cjs  pyproject.toml  vite.config.ts
.github/workflows/: build.yml
app/: main.py
app copy/: desktop_entry.py
app copy/core/: config.py  storage.py
app copy/services/: n2v_engine.py  reporting.py
app/api/: routes.py
app/core/: errors.py
app/models/: schemas.py
app/services/: analysis.py  image_io.py  metrics.py  preprocessing.py  roi.py  runtime_policy.py  statistical_engine.py
github/workflows/: build.yml
n2v-0.3.2/dazzling-spider/: README.md  careamics.yaml  environment.yml  inputs.npy  outputs.npy  rdf.yaml  test_reports.json  weights.pth
sample tif/: Composite 1_GB.tif  Composite 1_RB.tif  Composite 1_RG.tif  Composite 3_noise.tif  Composite 4_8bit_RG (1024).tif  Composite 7_4chan (667).tif  Composite 8_4chan (551).tif
src/: App.tsx  main.tsx
src/components/: DiscoveryCanvas.tsx  IntelligencePanel.tsx  ProcessPanel.tsx  ProfileDashboard.tsx
src/lib/: api.ts  desktop.ts  types.ts
src/styles/: app.css
src/test/: App.test.tsx  api.test.ts
tests/: test_analysis_math.py  test_api.py  test_image_io.py  test_roi.py  test_runtime_policy.py
