[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'dual-channel-colocalization-backend'
version = '0.1.0'
description = 'Dual-channel 16-bit bioimage colocalization backend'
readme = 'README.md'
requires-python = '>=3.11'
dependencies = [
  'fastapi>=0.111,<1.0',
  'uvicorn[standard]>=0.30,<1.0',
  'numpy>=1.26',
  'scipy>=1.13',
  'scikit-image>=0.23',
  'tifffile>=2024.5',
  'pillow>=10.3',
  'matplotlib>=3.8',
  'python-multipart>=0.0.9',
  'torch>=2.3',
  'transformers>=4.40.0',
  'accelerate>=0.30.0',
  'scikit-learn>=1.5',
  'statsmodels>=0.14',
  'pandas>=2.2',
  'httpx>=0.27',
  'mlx-vlm>=0.1.0; platform_system == "Darwin"',
]

[project.optional-dependencies]
dev = [
  'pytest>=8.2',
  'httpx>=0.27',
  'pyinstaller>=6.11',
]

[tool.setuptools.packages.find]
where = ['.']
include = ['app*']

[tool.pytest.ini_options]
pythonpath = ['.']
testpaths = ['tests']
